--- a/src/bcvc4sp.Addin/MasterPageGallery/BrightcoveApp.master
+++ b/src/bcvc4sp.Addin/MasterPageGallery/BrightcoveApp.master
@@ -8,6 +8,8 @@
 <%@ Register TagPrefix="WebPartPages" Namespace="Microsoft.SharePoint.WebPartPages" Assembly="Microsoft.SharePoint, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c" %>
 <%@ Register TagPrefix="wssuc" TagName="Welcome" Src="~/_controltemplates/15/Welcome.ascx" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<%@ Register Tagprefix="WebPartPages" Namespace="Microsoft.SharePoint.WebPartPages" Assembly="Microsoft.SharePoint, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c" %>
+<WebPartPages:AllowFraming runat="server" />
 <SharePoint:SPHtmlTag dir="<%$Resources:wss,multipages_direction_dir_value%>" ID="SPHtmlTag" runat="server">
     <head runat="server">
         <meta name="GENERATOR" content="Microsoft SharePoint" />
@@ -134,7 +136,7 @@
 
                 <%-- ribbon --%>
                 <div id="s4-ribbonrow">
-                    <div id="globalNavBox" class="noindex">
+                    <div id="globalNavBox" class="noindex ms-dialogHidden">
                         <div id="ribbonBox">
                             <div id="s4-ribboncont">
                                 <SharePoint:AjaxDelta ID="DeltaSPRibbon" BlockElement="true" runat="server">
